--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "homepage": "https://github.com/goofiw/cloaked-octo-cyril#readme",
   "dependencies": {
+    "bluebird": "^2.9.33",
     "express": "^4.13.1",
     "jade": "^1.11.0",
     "mongoose": "^4.0.6"
   },
   "devDependencies": {
-    "bower": "^1.4.1"
+    "bower": "^1.4.1",
+    "chai": "^3.0.0"
   }
 }
